@@ -47,6 +47,9 @@
         <version>3.13.0</version>
         <configuration>
           <release>${maven.compiler.release}</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -56,7 +59,7 @@
           <environmentVariables>
             <RDP_JVM_SYS>${env.RDP_JVM_SYS}</RDP_JVM_SYS>
           </environmentVariables>
-          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+          <argLine>--enable-preview --enable-native-access=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
